--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,8 @@ board = megaatmega2560
 framework = arduino
 build_flags = -DRH_PLATFORM_MEGA
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
-build_flags = -DRH_PLATFORM_NANO
+;[env:nanoatmega328]
+;platform = atmelavr
+;board = nanoatmega328
+;framework = arduino
+;build_flags = -DRH_PLATFORM_NANO
