--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,12 @@
  script:
      - platformio run
 
+# whitelist
+branches:
+  only:
+    - master
+    - MQ2.0
+
 
 #
 # Template #2: The project is intended to by used as a library with examples
